[tool.poetry]
name = "moose"
version = "0.1.0"
description = "Moose Tools"
authors = ["Chuck Mo <chuck@moosejudge.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2"
requests-toolbelt = "^0.9"

[tool.poetry.dev-dependencies]
pytest = "^5"
mkdocs = "^1"
mkdocs-material = "^7"
mkdocstrings = "^0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
