[tool.poetry]
name = "moosetools"
version = "0.7.0"
description = "Moose Tools"
license = "LGPL-3.0-or-later"
authors = ["Chuck Mo <chuck@moosejudge.com>"]
homepage = "https://moosetools.moosejudge.com"
repository = "https://github.com/TheChuckMo/moosetools"
readme = "README.md"

classifiers = [ "Topic :: Software Development :: Libraries :: Python Modules" ]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2"
requests-toolbelt = "^0.9.1"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.2"
pytest = "^6.2.5"
mkdocs-material = "^7.2.6"
mkdocstrings = "^0.15.2"
pip = "^21.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
